Fix website being tiny on iOS

--- a/www/styleSheet.css
+++ b/www/styleSheet.css
@@ -155,7 +155,7 @@ input[type=button] {
 
 input {
     padding: 0.8em;
-    font-size: 1emx;
+    font-size: 1em;
 }
 
 .name {
